Fix gap

--- a/src/components/MessageList/styles.module.scss
+++ b/src/components/MessageList/styles.module.scss
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 40;
+    gap: 40px;
     flex: 1;
 
     .message {
